# TDI_project

./: .gitignore  CMakeLists.txt  SD_button.cpp  SD_panel.cpp  SD_var_process.cpp  current_progress.txt  main.cpp
include/: SD_button.h  SD_colour.h  SD_panel.h  base.h
pic/: Presentation1.pptx
